--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Web Designer.", "Software Developer." ]'></span>
+								     data-rotate='[ "Web Developer.", "Software Developer." ]'></span>
 								</h2>
 							</div>
             </div>
