--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>S Mohammed Azharudeen</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>October 22, 2002</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>39A/100, East Street, Vincent, Salem, TamilNadu, India</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Al Quoz , Dubai UAE</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>636007</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>mohdazharuden@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+91 6379865769</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+971 508345232</span></li>
 		            </ul>
 		          </div>
 		        </div>
@@ -376,7 +376,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>39A/100, East Street, Vincent, Salem, TamilNadu, India</p>
+		            <p>Al Quoz , Dubai UAE</p>
 		          </div>
 	          </div>
           </div>
@@ -387,7 +387,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+91 63798 65769</a></p>
+		            <p><a href="tel://1234567920">+971 508345232</a></p>
 	            </div>
 	          </div>
           </div>
@@ -438,7 +438,7 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 63798 65769</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 508345232</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">mohdazharuden@gmail.com</span></a></li>
 	              </ul>
 	            </div>
