--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		            	<li class="d-flex"><span>Name:</span> <span>S Mohammed Azharudeen</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>October 22, 2002</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Al Quoz , Dubai UAE</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>636007</span></li>
+		            	<!-- <li class="d-flex"><span>Zip code:</span> <span>636007</span></li> -->
 		            	<li class="d-flex"><span>Email:</span> <span>mohdazharuden@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+971 508345232</span></li>
 		            </ul>
